# PocketLLM

./: .flutter  .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  apply.md  package.json  pubspec.yaml  setup.sh  tsconfig.json  vitest.config.ts
pocketllm-backend/: .env  .env.example  .env.production  .gitignore  AI-README.md  API_DOCUMENTATION.md  INVITE_CODE_FEATURE.md  POSTMAN_API_GUIDE.md  PROMPTS.md  README.md  api_structure.json  main.py  modellist.json  openapi.json  package-lock.json  package.json  pyproject.toml  requirements.txt  test_invite_code.py  vercel.json
pocketllm-backend/api/: index.ts
pocketllm-backend/app/: __init__.py
pocketllm-backend/app/DB/: schema.md  schema.sql
pocketllm-backend/app/agents/: __init__.py
pocketllm-backend/app/api/: __init__.py  deps.py
pocketllm-backend/app/core/: __init__.py  config.py  database.py  (+2 more)
pocketllm-backend/database/: __init__.py  database_model.py  schema.sql
pocketllm-backend/src/: app.controller.ts  app.module.ts  main.ts
pocketllm-backend/tests/: __init__.py  test_api_deps.py  test_api_key_validation.py  test_auth_cookies.py  test_auth_schema.py  test_auth_service.py  test_chats_service.py  test_crypto.py  test_crypto_utils.py  test_database_mock.py  test_database_supabase_rest.py  test_health.py  test_models_filters.py  test_new_providers.py  test_provider_catalogue.py  test_provider_configs.py  test_referral_service.py  test_security_utils.py  test_serializers.py  test_user_asset_service.py  test_users_schema.py  test_users_service.py  test_vercel_deployment_config.py  test_waitlist_service.py
(+685 files in other folders)
